--- a/240303.html
+++ b/240303.html
@@ -28,6 +28,24 @@
 	<tr>
     		<td><audio controls src="./240303/02.mp3"></audio></td>
 	</tr>
+	<tr >
+    		<td><font size="4">03《基 D 徒的意识》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/03.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">04《建立上 D 的话语》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/03.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">04《建立上 D 的话语》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/03.mp3"></audio></td>
+	</tr>
 	
 	
        
