--- a/240303.html
+++ b/240303.html
@@ -38,13 +38,31 @@
     		<td><font size="4">04《建立上 D 的话语》</font></td>
 	</tr>
 	<tr>
-    		<td><audio controls src="./240303/03.mp3"></audio></td>
+    		<td><audio controls src="./240303/04.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">04《建立上 D 的话语》</font></td>
+    		<td><font size="4">05《我个人的信心战争》</font></td>
 	</tr>
 	<tr>
-    		<td><audio controls src="./240303/03.mp3"></audio></td>
+    		<td><audio controls src="./240303/05.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">06《小心你的言辞》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/06.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">07《上 D 的话乃是真理》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/07.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">08《舌头的力量》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/08.mp3"></audio></td>
 	</tr>
 	
 	
