--- a/240420.html
+++ b/240420.html
@@ -1,1 +1,90 @@
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+
+<p>
+
+<h1>甘坚信《祷告26讲》</h1>
+
+<p>
+<hr>
+</p>
+</p>
+<p>&nbsp;</p>
+<table>
+	<tr >
+    		<td><font size="4">00《S话语权能》简介</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/00.mp3"></audio></td>
+ 	</tr>
+	<tr >
+    		<td><font size="4">01《S的话》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/01.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">02《在你里面的创造权能》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/02.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">03《基 D 徒的意识》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/03.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">04《建立上 D 的话语》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/04.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">05《我个人的信心战争》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/05.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">06《小心你的言辞》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/06.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">07《上 D 的话乃是真理》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/07.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">08《舌头的力量》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/08.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">09《伟大的告白》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/09.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">10《S的话乃是良药》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240303/10.mp3"></audio></td>
+	</tr>
+	
+	
+	
+
+</table>
+</p></p></p>
+<p>&nbsp;</p>
+<p><font size="4"><a href="./index.html">返回目录页</a></font></p>
+
+
+
 
