--- a/240420.html
+++ b/240420.html
@@ -11,67 +11,67 @@
 <p>&nbsp;</p>
 <table>
 	<tr >
-    		<td><font size="4">01《祷告蒙应允的七个步骤-上》</font></td>
+    		<td><font size="4">01《祷G蒙应允的七个步骤-上》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/01.mp3"></audio></td>
  	</tr>
 	<tr >
-    		<td><font size="4">01《祷告蒙应允的七个步骤-下》</font></td>
+    		<td><font size="4">02《祷G蒙应允的七个步骤-下》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/02.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">02《在你里面的创造权能》</font></td>
+    		<td><font size="4">03《打开天T的祷告》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/03.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">03《基 D 徒的意识》</font></td>
+    		<td><font size="4">04《耶S之名的权柄》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/04.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">04《建立上 D 的话语》</font></td>
+    		<td><font size="4">05《同心合意的祷G》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/05.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">05《我个人的信心战争》</font></td>
+    		<td><font size="4">06《我个人的信心战争》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/06.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">06《小心你的言辞》</font></td>
+    		<td><font size="4">07《小心你的言辞》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/07.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">07《上 D 的话乃是真理》</font></td>
+    		<td><font size="4">08《上 D 的话乃是真理》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/08.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">08《舌头的力量》</font></td>
+    		<td><font size="4">09《舌头的力量》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/09.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">09《伟大的告白》</font></td>
+    		<td><font size="4">10《伟大的告白》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/10.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">10《S的话乃是良药》</font></td>
+    		<td><font size="4">11《S的话乃是良药》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/11.mp3"></audio></td>
