--- a/240420.html
+++ b/240420.html
@@ -41,19 +41,19 @@
     		<td><audio controls src="./240420/05.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">06《我个人的信心战争》</font></td>
+    		<td><font size="4">06《同心合意的祷G》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/06.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">07《小心你的言辞》</font></td>
+    		<td><font size="4">07《祷G中的六件事情-上》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/07.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">08《上 D 的话乃是真理》</font></td>
+    		<td><font size="4">08《祷G中的六件事情-下》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/08.mp3"></audio></td>
