--- a/240420.html
+++ b/240420.html
@@ -53,19 +53,19 @@
     		<td><audio controls src="./240420/07.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">08《方言—赞美的涌流》</font></td>
+    		<td><font size="4">08《把灵里的祷告翻出来》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/08.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">09《舌头的力量》</font></td>
+    		<td><font size="4">09《方言—赞美的涌流》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/09.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">10《伟大的告白》</font></td>
+    		<td><font size="4">10《祷告新层次》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/10.mp3"></audio></td>
