--- a/240420.html
+++ b/240420.html
@@ -71,10 +71,22 @@
     		<td><audio controls src="./240420/10.mp3"></audio></td>
 	</tr>
 	<tr >
-    		<td><font size="4">11《S的话乃是良药》</font></td>
+    		<td><font size="4">11《祈求和委身的祷告》</font></td>
 	</tr>
 	<tr>
     		<td><audio controls src="./240420/11.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">12《敬拜的祷G-上》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/12.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">13《敬拜的祷G-下》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/13.mp3"></audio></td>
 	</tr>
 	
 	
