--- a/240420.html
+++ b/240420.html
@@ -112,6 +112,18 @@
 	<tr>
     		<td><audio controls src="./240420/17.mp3"></audio></td>
 	</tr>
+	<tr >
+    		<td><font size="4">18《耶S关于祷G的教导-3》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/18.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">19《耶S关于祷G的教导-4》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/19.mp3"></audio></td>
+	</tr>
 	
 	
 	
