--- a/240420.html
+++ b/240420.html
@@ -124,6 +124,18 @@
 	<tr>
     		<td><audio controls src="./240420/19.mp3"></audio></td>
 	</tr>
+	<tr >
+    		<td><font size="4">20《保罗关于祷G的教导-上》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/20.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">21《保罗关于祷G的教导-下》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/21.mp3"></audio></td>
+	</tr>
 	
 	
 	
