--- a/240420.html
+++ b/240420.html
@@ -136,6 +136,18 @@
 	<tr>
     		<td><audio controls src="./240420/21.mp3"></audio></td>
 	</tr>
+	<tr >
+    		<td><font size="4">22《其他人关于祷G的教导-上》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/22.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">23《其他人关于祷G的教导-下》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/23.mp3"></audio></td>
+	</tr>
 	
 	
 	
