--- a/240420.html
+++ b/240420.html
@@ -148,6 +148,24 @@
 	<tr>
     		<td><audio controls src="./240420/23.mp3"></audio></td>
 	</tr>
+	<tr >
+    		<td><font size="4">24《S在祷G方面的旨意-上》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/24.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">25《S在祷G方面的旨意-中》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/25.mp3"></audio></td>
+	</tr>
+	<tr >
+    		<td><font size="4">26《S在祷G方面的旨意-下》</font></td>
+	</tr>
+	<tr>
+    		<td><audio controls src="./240420/26.mp3"></audio></td>
+	</tr>
 	
 	
 	
@@ -156,7 +174,5 @@
 </p></p></p>
 <p>&nbsp;</p>
 <p><font size="4"><a href="./index.html">返回目录页</a></font></p>
-
-
 
 
