--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <h1>《生命成长》</h1>
 
 <hr><hr>
-	<li><font size="4"><a href="./240303.html">《话语的力量》00-10章</a></font></li>
+	<li><font size="4"><a href="./240429.html">甘坚信《祷G-26讲》00-10章</a></font></li>
+        <li><font size="4"><a href="./240303.html">查尔斯《话语的力量》00-10章</a></font></li>
 
 	
 
