--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <hr><hr>
 	<li><font size="4"><a href="./240420.html">甘坚信《祷G-26讲》01-26讲</a></font></li>
-        <li><font size="4"><a href="./240303.html">查尔斯《话语的力量》00-10章</a></font></li>
+        <li><font size="4"><a href="./240303.html">查尔斯《S话语的力量/S话语的权能》00-10章</a></font></li>
 
 	
 
